D3D12: Fix rendering lots of different-sized Text objects

XMLWordPrintable

    • generic
    • windows

      When D3D12 has to draw a lot of different-sized Text objects the rendering results might corrupt, or might not render at all. In DebugNative build this triggers a CommandList assertion (see attachment).

      Problem can be seen on RenderPerfTest and its newly-added RandomSizeTextRenderer (so far only exists on sandbox, direct3d12 branch), run with object count of 8 or higher.

            Assignee:
            Lukasz Kostyra
            Reporter:
            Lukasz Kostyra
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: