8371995: D3D12: Fix rendering lots of different-sized Text objects

Issue was because one FlushCommandList() call in RingContainer was not
followed by a mid-frame Signal() call.

To prevent similar situations from happening all manual Signal() calls
were removed (except from SwapChain which needs Signal() after calling
Present()) and FlushCommandList() now calls Signal() implicitly.

Also added some code to ensure CommandListPool properly waits for
multiple Command Lists in a row.