modules/javafx.graphics/src/main/native-prism-d3d12/Internal/D3D12CheckpointQueue.hpp
@@ -71,6 +71,11 @@ public:
     bool AddCheckpoint(CheckpointType type, Waitable&& waitable);
     bool WaitForNextCheckpoint(CheckpointType type);
     void PrintStats();
+
+    bool HasCheckpoints() const
+    {
+        return !mQueue.empty();
+    }
 };
 
 } // namespace Internal
